# nju-schedule-ics

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  conofig.toml  diesel.toml  docker-compose.yml  flake.nix  shell.nix
.agents/skills/update-dioxus/: SKILL.md
.agents/skills/update-dioxus-fork/: SKILL.md
.github/workflows/: nix-github-actions.yml
.trae/documents/: Automatic School Adapter Registration with Inventory.md
.zed/: settings.json  tasks.json
assets/: animated_gradient.css  main.css  package-lock.json  package.json  rainbow_shadow.css  tailwind.css
macros/: Cargo.toml
macros/src/: lib.rs
migrations/2025-10-14-133714_create_castgc/: down.sql  up.sql
migrations/2025-10-23-062902_create-key-to-school/: down.sql  up.sql
src/: lib.rs  login.rs  main.rs  schema.rs
src/adapters/: all_adapters.rs  all_school_adapters.rs  course.rs  location.rs  login_process.rs  mod.rs  traits.rs
src/adapters/nju_batchelor/: db_schema.rs  login.rs  mod.rs
src/adapters/nju_batchelor/course/: getcourse.rs  location.rs  mod.rs
src/adapters/nju_batchelor/course/interfaces/: all_semesters.rs  courses.rs  curr_semester.rs  mod.rs
src/adapters/nju_graduate/: login.rs  mod.rs
src/adapters/nju_graduate/course/: mod.rs  utils.rs
src/adapters/nju_graduate/course/interfaces/: all_semesters.rs  course_list.rs  courses.rs  mod.rs
src/adapters/nju_undergrad/: login.rs  mod.rs
src/adapters/nju_undergrad/course/: getcourse.rs  location.rs  mod.rs
src/adapters/nju_undergrad/course/interfaces/: all_semesters.rs  courses.rs  curr_semester.rs  final_exams.rs  mod.rs
src/gui/: app.rs  login.rs  mod.rs  select_school.rs  utils.rs
src/gui/steps/: login.rs  mod.rs  select_school.rs  view_link.rs
src/holidays/: holidays.rs
src/html/: error.html  index.html  style.css  subscription.html
src/httpapi/: subscription.rs
src/nju/: example.json  getcourse.rs  getexampted.rs  login.rs  mod.rs  parse_course.rs
src/plugins/: holidays.rs  mod.rs
src/schedule/: calendar.rs  course.rs  example_course_data_1.txt  getcourse.rs  holidays.rs  location.rs  mod.rs  time.rs
src/server/: calendar.rs  config.rs  db.rs  error.rs  log_format.rs  login.rs  main.rs  mod.rs  nojslogin.rs  server.rs  state.rs  subscription.rs  telemetry.rs
src/server/apis/: adapters.rs  mod.rs
src/web/: config.rs  db.rs  error.rs  login.rs  mod.rs  server.rs  subscription.rs  test.ipynb
